# ICF

./: C.csv  README.md  anime.py  generate_scintillator_data.py  icf_neutron_simulation.py  pdf_text.txt  plot_neutron_trajectories.py  plot_stl_geometry.py  pyproject.toml  run_simulation.py  scintillator_simulation_v04.py  scintillator_simulation_v05.py
Data/: neutron_data.csv  neutron_trajectories.csv  plot_track.py
icf_simulation/: __init__.py  config.py  cross_section.py  data_classes.py  data_paths.py  geometry.py  io_utils.py  runner.py  simulation.py  stl_utils.py  transport.py  visualization.py
icf_simulation/core/: __init__.py  constants.py  data_classes.py  kinematics.py  sampling.py  simulation.py  transport.py
icf_simulation/data/: __init__.py
icf_simulation/data/cross_sections/: Al.csv  H.csv
icf_simulation/data/stl_models/: nTOF_without_scintillant.STL
icf_simulation/examples/: __init__.py  basic_usage.py
icf_simulation/plotting/: __init__.py  geometry_viewer.py  results.py  trajectories.py
icf_simulation/testing/: __init__.py  comparison.py  simple_geometry.py  validation.py
scripts/: plot_neutron_trajectories.py  plot_stl_geometry.py  run_simulation.py
tests/: __init__.py  test_simple_geometry.py
